compiler/testData/checkerWithErrorTypes/quick/cast/WhenErasedDisallowFromAny.jet
// +JDK

import java.util.List;

fun ff(l: Any) = when(l) {
    is <!CANNOT_CHECK_FOR_ERASED!>List<String><!> => 1
    else 2
}
